--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="android:layout_marginStart">@dimen/margin_start_end</item>
         <item name="android:layout_marginEnd">@dimen/margin_start_end</item>
     </style>
+
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/turquoise</item>
+    </style>
 </resources>
